Fixed alignment

--- a/static/disc.css
+++ b/static/disc.css
@@ -74,3 +74,11 @@ font-size: 1.3em;
     color: #DA70D6;
 }
 
+.container {
+    margin-left: 11%;
+}
+
+.lead {
+    margin-right: 11%;
+}
+
